# glider-data-infrastructure

./: .env.example  .gitignore  .sqlfluff  README.md  catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  pyproject.toml  run_results.json
.devcontainer/: devcontainer.json  post_attach.sh
.github/: test.yaml
.github/workflows/: publish_dbt_docs.yaml  run_dbt.yaml
compiled/flight_log/models/: flight_log.sql  flight_log_with_weather_info.sql
dbt/flight_log/: dbt_project.yml  profiles.yml
dbt/flight_log/models/: flight_log.sql  flight_log_with_weather_info.sql  schema.yaml
figures/: architecture.drawio
infra/: main.tf  terraform.tfvars.sample  variables.tf
infra/modules/bigquery/: main.tf  variables.tf
infra/modules/cloud_functions/: main.tf  variables.tf
infra/modules/scheduled_function/: main.tf  variables.tf
infra/modules/scheduled_function/function/: amedas_scraper  main.py  requirements.txt
infra/modules/storage_triggered_function/: main.tf  variables.tf
infra/modules/storage_triggered_function/function/: main.py  requirements.txt
src/amedas_scraper/: consts.py  schema.py  scraper.py  utils.py
tests/: test_scraper.py
